Changelog

1.5.2

	Fixed issue where it was telling KSP that the size was changing every tick, which was causing issues in other mods which were reacting to the event
	Fixed issue where clicking Apply wasn't updating the Totalmass display immediately, you needed to click it a 2nd time
	Fixed issue where changing the fuel wasn't showing the change in mass unless you clicked the Apply button
	Removed the CompatibilityChecker

1.5.2.1
	Added code to compile in the version info into the AssemblyVersion field
	Pointed to new .version file 
	Added deploy and buildRelease batch file

1.5.3
	Fixed problem with loading part on saved ship loses width.
	Changed NRAP to disallow it from being the root part

1.5.4
	Snappable and fully dynamic diameter

1.5.5
	Added undo ability
	Fixed node size for sizes < 3.75
1.5.5.1
	Reenabled ability to be a root part
1.5.6
	updated for 1.3
	needed to change the case of the text "Filter by Module" to "Filter by module" in the NRAPIconManager

1.5.7
	Updated for KSP 1.3.1

1.5.8
	Inline part added